# FreeRTOS

./: README.md
main/: CMakeLists.txt  intelligent_engine.c  intelligent_engine.h  main.c  storage_guard.c  storage_guard.h  system_health.c  system_health.h  watchdog_manager.c  watchdog_manager.h
